# zksync_era_precompiles

./: .gitignore  .gitmodules  EcAdd.yul  EcMul.yul  Makefile  Modexp.yul  README.md  References.md  gas_reports.py  test.txt  test_results.ipynb
assets/: benches_calldata.json  (+2 more)
tests/: Cargo.toml  build.rs  ec_add_tests.rs  ec_mul_tests.rs  test_utils.rs
tests/contracts/: Verifier.sol
tests/contracts/libraries/: PairingsBn254.sol
tests/contracts/new_verifier/: Verifier.sol
tests/contracts/old_verifier/: Plonk4VerifierWithAccessToDNext.sol
tests/contracts/p256verify/: P256Verify.sol  P256Verify.vy
tests/gas_reports/: p256verify_benches_report.md  p256verify_report.csv
tests/gas_reports_2/: ecadd_report.csv  ecmul_report.csv  ecpairing_report.csv  p256verify_report.csv  secp256k1verify_report.csv
tests/gas_reports_3/: ecadd_report.csv  ecmul_report.csv  ecpairing_report.csv  p256verify_report.csv  secp256k1verify_report.csv
tests/gas_reports_s/: ecadd_report.csv  ecmul_report.csv  ecpairing_report.csv  p256verify_report.csv  secp256k1verify_report.csv
tests/gas_reports_z/: ecadd_report.csv  ecmul_report.csv  ecpairing_report.csv  p256verify_report.csv  secp256k1verify_report.csv
tests/src/compile/: compiler.rs  errors.rs  mod.rs  output.rs  project.rs
tests/tests/: ecadd_tests.rs  ecaddg2_test.rs  ecmul_tests.rs  ecmulg2_test.rs  ecpairing_tests.rs  integration_tests.rs  modexp_one_limb_tests.rs  modexp_tests.rs  p256verify_benches.rs  p256verify_daimo_tests.rs  p256verify_tests.rs  secp256k1verify_tests.rs  sectp256k1verify_tests.rs  test_utils.rs
(+88 files in other folders)
