[package]
name = "zksync_era_precompiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync-web3-rs = { git = "https://www.github.com/LambdaClass/zksync-web3-rs", branch = "support_precompile_calls" }
tokio = { version = "1.11.0", features = ["full"] }

[profile.test]
opt-level = 3
debug-assertions = true
