[package]
name = "zksync_era_precompiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync-web3-rs = { version = "0.1.1", features = ["ethers-solc"] }
tokio = { version = "1.11.0", features = ["full"] }
hex = "0.4"
eyre = "0.6.8"
thiserror = "1.0.49"
serde = "1.0.188"
dirs = "5.0.1"
serde_json = "1.0.107"

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.20"

[profile.test]
opt-level = 3
debug-assertions = true
